# vibe

./: .gitignore  .gitmodules  LICENSE  README.md  go.mod  go.sum  pyproject.toml
bwe-test/: README.md  report.ipynb
bwe-test/cc/: acknowledgment.go  feedback_adapter.go
bwe-test/gcc/: arrival_group_accumulator.go  arrival_group_accumulator_test.go  delay_rate_controller.go  delivery_rate_estimator.go  delivery_rate_estimator_test.go  exponential_moving_average.go  exponential_moving_average_test.go  kalman.go  loss_rate_controller.go  loss_rate_controller_test.go  overuse_detector.go  overuse_detector_test.go  rate_controller.go  rate_controller_test.go  rtt.go  send_side_bwe.go  state.go  state_test.go  usage.go
bwe-test/interceptorcc/: interceptor.go
bwe-test/logging/: file.go  format.go
bwe-test/pacing/: intervalbudget.go  options.go  pacing.go  rounrobin.go
bwe-test/packetdump/: format.go  packet_dump.go  packet_dumper.go  receiver_interceptor.go  sender_interceptor.go
bwe-test/receiver/: option.go  receiver.go
bwe-test/report/: helpers.py  report.ipynb
bwe-test/sender/: abr.go  bitrateallocator.go  option.go  packetizer.go  sender.go  statisticalencodersource.go  trace_codec_source.go  tracecodecsource.go  track.go
bwe-test/syncodec/: codec.go  perfect_codec.go  statistical_codec.go  trace_codec.go  trace_codec_test.go
bwe-test/traces/: bitrate.py  reader.go  reader_test.go
bwe-test/vnet/: config.go  config.yaml  flow.go  main.go  manager.go
demo/: README.md  nginx.conf
demo/cmd/client/: config.go  config.yaml  main.go
demo/cmd/demo/: attrs.go  config.go  config.yaml  handler.go  main.go  peerconnection.go
demo/pkg/attr/: attrs.go
demo/reportanalysis/: report.ipynb
demo/static/: demo.js  index.html
simulator/: CMakeLists.txt  simulator.cpp
simulator/cisco/: CMakeLists.txt  README.rst
simulator/cisco/examples/: CMakeLists.txt  rmcat-example.cc
simulator/cisco/model/: CMakeLists.txt
simulator/cisco/model/apps/: CMakeLists.txt  rmcat-sender.cc  rmcat-sender.h
simulator/cisco/model/congestion-control/: dummy-controller.h  sender-based-controller.cc  sender-based-controller.h
simulator/cisco/model/syncodecs/: syncodecs.h  traces-reader.cc
simulator/cisco/model/topo/: topo.cc  topo.h
simulator/cisco/tools/: plot_tests.py  process_test_logs.py
