[tool.poetry]
name = "bwe-research"
version = "0.1.0"
description = ""
authors = ["Aleksandr Alekseev <alekseev-dev@yandex-team.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
numpy = "^1.26.1"
jupyter = "^1.0.0"
plotly = "^5.18.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
