[tool.poetry]
name = "bwe-research"
version = "0.1.0"
description = ""
authors = ["Aleksandr Alekseev <alekseev-dev@yandex-team.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.3"
numpy = "^2.2.5"
jupyter = "^1.1.1"
plotly = "^6.0.1"
pandas = "^2.2.3"
cffi = "^1.17.0rc1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
